tests/ttt-30-strict-id-attempt-2/type-errors/id2.ts
// In some file with code related to markets

export type Id = string & { readonly __brand: unique symbol };


export function getMarketId(marketId: Id): Id {
  return marketId;
}
